# MPI_basics_2

./: CMakeLists.txt  README  README.md  main.cpp
